# swcli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  prek.toml  release-please-config.json
.config/: mise.toml
.config/mise/: mise.toml
.github/: CODEOWNERS
.github/workflows/: build-release.yml  pull_request.yml  release-please.yml  security_scan.yml
.zed/: settings.json
src/: cli.rs  main.rs
src/aws/: codeartifact.rs  mod.rs  sso.rs
